# IVpn

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/UI/: tui.h
include/core/: bootstrap_waiter.h  circuit_builder.h  config.h  exit_selector.h  geoip.h  killswitch.h  packet_processor.h  route_manager.h  service.h  socks5.h  tor_launcher.h  wintun.h
include/tor/: control_port.h
src/UI/: tui.cpp
src/core/: bootstrap_waiter.cpp  circuit_builder.cpp  config.cpp  exit_selector.cpp  geoip.cpp  killswitch.cpp  packet_processor.cpp  route_manager.cpp  service.cpp  socks5.cpp  tor_launcher.cpp  wintun.cpp
src/tor/: control_port.cpp
